src/test/deca/context/invalid/provided/class38.deca
class A{
    int x;
    int somme(){
        return a;
    }
}

